2012-11-19  Sergio Martin <sergio.martin@artica.es>
	
	* modules/pandora_module.h
	modules/pandora_module.cc: Fixed type conflicts in the
	last changes

2012-11-19  Sergio Martin <sergio.martin@artica.es>

	* modules/pandora_module.h
	modules/pandora_module_factory.cc
	modules/pandora_module.cc: Added several new module fields
	to the XML

2012-04-19  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Default to generic_data if no module_type
	  is not set.

	* installer/pandora.mpi: Remove the util directory from the PATH when
	  uninstalling.

2012-02-07  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Convert tentacle_timeout to milliseconds.

2012-02-02  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora.mpi: Added an uninstall action to delete
	  the agent's at job.

	* installer/scripts/delete_at_job.bat: Added to repository. Batch
	  script to delete the agent's at job.

2012-01-30  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_regexp.cc: Do not open the file in the
	  constructor to avoid trouble if other modules modify it before
	  the regexp module runs.

2012-01-19  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_odbc.cc: Check for NULL pointers.

2012-01-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Fixed an error when checking multiple
	  preconditions. Fixed precondition evaluation logic.

2012-01-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.h,
	  modules/pandora_module.h,
	  modules/pandora_module_factory.cc,
	  modules/pandora_module.cc,
	  pandora_windows_service.cc: Added support for intensive modules.

2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_perfcounter.cc,
	  modules/pandora_module_perfcounter.h: Use MinrGW's pdh.h
	  instead of our own definitions.

	* modules/pandora_module.cc: Fixed a bug in pre-conditions that led to an
	  infinite loop.

2011-12-12  Ramon Novoa  <rnovoa@artica.es>
